[gd_scene load_steps=4 format=3 uid="uid://dpycv6gain4l2"]

[ext_resource type="Script" uid="uid://csjkb8o245slw" path="res://scripts/entities/planet.gd" id="1_5y7xe"]
[ext_resource type="Material" uid="uid://jshr6anvgv2" path="res://shaders/illum_soft_material.tres" id="2_1408b"]
[ext_resource type="Material" uid="uid://ripka5kvt34q" path="res://shaders/planet_base_material.tres" id="3_notw0"]

[node name="Planet" type="Node2D"]
script = ExtResource("1_5y7xe")

[node name="IlluminationLayer" type="Sprite2D" parent="."]
material = ExtResource("2_1408b")

[node name="AtmosphereLayer" type="Sprite2D" parent="."]
visible = false

[node name="TerrainLayer" type="Sprite2D" parent="."]

[node name="BaseSphere" type="ColorRect" parent="."]
material = ExtResource("3_notw0")
offset_right = 1024.0
offset_bottom = 1024.0

[node name="NameLabel" type="RichTextLabel" parent="."]
z_index = 4
custom_minimum_size = Vector2(100, 20)
anchors_preset = -1
offset_left = -100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
